--- a/.env
+++ b/.env
@@ -1,13 +1,6 @@
-# SMTP Configuration for Resend (legacy)
-SMTP_SERVER=smtp.resend.com
-SMTP_PORT=465
-SMTP_USERNAME=resend
-SMTP_EMAIL=roland.zonai@horizoneurope.io
-SMTP_SENDER_NAME=Horizon Europe IO
-SMTP_PASSWORD=re_2TvWxJW8_CcSs1JTUQ4B8EZrpMhriC2df
+# Email Sender Configurations (defined in settings.py)
+# Current Active: roland.zonai@horizoneurope.io (horizoneurope)
+# Alternative: roland.zonai@horizon.eu.com (horizon_eu)
 
-# Resend API Configuration (for tracking)
-RESEND_API_KEY=re_2TvWxJW8_CcSs1JTUQ4B8EZrpMhriC2df
-
-# Resend Webhook Configuration
+# Resend Webhook Configuration (used by both webhook endpoints)
 RESEND_WEBHOOK_SECRET=whsec_bI4f0tlQFbc2axlwD6Nn0L+bLPEdJpyF
